--- a/controllers/bek_controller/network_plots.ipynb
+++ b/controllers/bek_controller/network_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,29 +25,13 @@
     "cmap = cm.get_cmap('plasma')\n",
     "rcParams.update({'font.size': 12})\n",
     "\n",
-    "# Load place cell and reward cell network data\n",
-    "with open('pcn.pkl', 'rb') as f:\n",
-    "    pc_net = pickle.load(f)\n",
-    "with open('rcn.pkl', 'rb') as f:\n",
-    "    rc_net = pickle.load(f)\n",
-    "\n",
-    "# Load environment data (place cell and reward map coordinates)\n",
-    "with open('hmap_x.pkl', 'rb') as f:\n",
-    "    hmap_x = pickle.load(f)\n",
-    "with open('hmap_y.pkl', 'rb') as f:\n",
-    "    hmap_y = pickle.load(f)\n",
-    "with open('hmap_z.pkl', 'rb') as f:\n",
-    "    hmap_z = np.asarray(pickle.load(f))\n",
-    "with open('hmap_g.pkl', 'rb') as f:\n",
-    "    hmap_g = np.asarray(pickle.load(f))\n",
-    "\n",
     "goal_r = 0.3  # Define goal radius\n",
     "goalLocation = [-1, 1]  # Define goal location (can be updated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +139,18 @@
     "def probeOne(probed):\n",
     "    \"\"\"\n",
     "    Visualizes the activation of a specific place cell (probed) over the environment map.\n",
+    "    \n",
+    "    Args:\n",
+    "        probed (int): The index of the place cell to visualize.\n",
     "    \"\"\"\n",
+    "    # Load the necessary data\n",
+    "    with open('hmap_x.pkl', 'rb') as f:\n",
+    "        hmap_x = np.asarray(pickle.load(f))\n",
+    "    with open('hmap_y.pkl', 'rb') as f:\n",
+    "        hmap_y = np.asarray(pickle.load(f))\n",
+    "    with open('hmap_z.pkl', 'rb') as f:\n",
+    "        hmap_z = np.asarray(pickle.load(f))\n",
+    "    \n",
     "    fig = plot.figure()\n",
     "    ax = fig.add_subplot(111)\n",
     "    ax.set_aspect('equal')\n",
@@ -168,6 +163,10 @@
     "    v = f\"v_{{{probed}}}^p\"\n",
     "    plot.title(f\"Place Cell {probed} Activation\")\n",
     "    plot.show()\n",
+    "\n",
+    "# Load hmap_z only to find top 10 cells\n",
+    "with open('hmap_z.pkl', 'rb') as f:\n",
+    "    hmap_z = np.asarray(pickle.load(f))\n",
     "\n",
     "# Calculate the total activation for each place cell\n",
     "total_activations = np.sum(hmap_z, axis=0)\n",
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,10 +196,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pickle\n",
-    "import tensorflow as tf\n",
-    "\n",
     "def plot_rcn_activation(context=0):\n",
     "    \"\"\"\n",
     "    Visualizes the reward cell activations across the environment.\n",
@@ -208,6 +203,16 @@
     "    Parameters:\n",
     "    context (int): Context index for the reward cell weights.\n",
     "    \"\"\"\n",
+    "    # Load required data\n",
+    "    with open('rcn.pkl', 'rb') as f:\n",
+    "        rc_net = pickle.load(f)\n",
+    "    with open('hmap_x.pkl', 'rb') as f:\n",
+    "        hmap_x = np.asarray(pickle.load(f))\n",
+    "    with open('hmap_y.pkl', 'rb') as f:\n",
+    "        hmap_y = np.asarray(pickle.load(f))\n",
+    "    with open('hmap_z.pkl', 'rb') as f:\n",
+    "        hmap_z = np.asarray(pickle.load(f))\n",
+    "\n",
     "    # Load the RCN layer (reward cell network)\n",
     "    with open('rcn.pkl', 'rb') as f:\n",
     "        rc_net = pickle.load(f)\n",
@@ -232,7 +237,7 @@
     "        raise ValueError(f\"Shape mismatch: reward_function has shape {reward_function.shape}, but expected {hmap_x.shape}.\")\n",
     "\n",
     "    # Plot the reward function over the environment\n",
-    "    fig, ax = plt.subplots(dpi=150)\n",
+    "    fig, ax = plot.subplots(dpi=150)\n",
     "    ax.set_aspect('equal')\n",
     "\n",
     "    # Create a hexbin plot for the reward activations\n",
@@ -247,46 +252,60 @@
     "    fig.subplots_adjust(left=0.05, right=0.95, top=0.95, bottom=0.05)\n",
     "\n",
     "    # Draw the goal location as a green circle\n",
-    "    goal = plt.Circle(goalLocation, goal_r, color='green', alpha=0.5, fill=True)\n",
+    "    goal = plot.Circle(goalLocation, goal_r, color='green', alpha=0.5, fill=True)\n",
     "    ax.add_patch(goal)\n",
     "\n",
     "    # Add a colorbar for the reward values\n",
     "    fig.colorbar(cntr)\n",
-    "    plt.title(f\"Reward Map Visualization for context {context}\")\n",
-    "    plt.show()\n",
+    "    plot.title(f\"Reward Map Visualization for context {context}\")\n",
+    "    plot.show()\n",
     "\n",
     "# Call the function with a specific context\n",
-    "plot_rcn_activation(context=0)\n"
+    "#plot_rcn_activation(context=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 4.9478483  4.949582   5.053147   5.1927085  5.243888   5.2790217\n",
-      "  5.3758283  5.5629106  5.868557   6.190611   6.682854   6.7556386\n",
-      "  6.839167   7.326552   7.8541546  7.9563904  8.237173   8.318061\n",
-      "  8.558673   8.869198   9.3384075  9.449179   9.903341  10.000376\n",
-      " 10.059053  10.665854  11.011469  11.365303  11.482655  11.766836\n",
-      " 11.772343  11.973651  12.571096  13.290087  13.486359  14.01337\n",
-      " 14.155986  14.5641775 14.577279  17.297054 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_40_values = np.sort(rc_net.w_in_effective, axis=None)[-40:]\n",
-    "print(top_40_values)"
+    "def plot_complexity():\n",
+    "    with open(\"hmap_complexity.pkl\", \"rb\") as f:\n",
+    "        hmap_complexity = pickle.load(f)\n",
+    "    \"\"\"\n",
+    "    Visualizes the environmental complexity over the environment map.\n",
+    "    \"\"\"\n",
+    "    # Load necessary data\n",
+    "    with open(\"hmap_x.pkl\", \"rb\") as f:\n",
+    "        hmap_x = np.asarray(pickle.load(f))\n",
+    "    with open(\"hmap_y.pkl\", \"rb\") as f:\n",
+    "        hmap_y = np.asarray(pickle.load(f))\n",
+    "    with open(\"hmap_complexity.pkl\", \"rb\") as f:\n",
+    "        hmap_complexity = pickle.load(f)\n",
+    "\n",
+    "    fig = plot.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    ax.set_aspect('equal')\n",
+    "\n",
+    "    # Plot complexity using hexbin for better visualization\n",
+    "    cntr = ax.hexbin(hmap_x, hmap_y, hmap_complexity, gridsize=50, cmap=cmap, alpha=0.6)\n",
+    "\n",
+    "    # Add colorbar and title\n",
+    "    plot.colorbar(cntr)\n",
+    "    plot.title(\"Environmental Complexity\")\n",
+    "    plot.xlabel(\"X Position\")\n",
+    "    plot.ylabel(\"Y Position\")\n",
+    "    plot.show()\n",
+    "\n",
+    "# Call the function\n",
+    "plot_complexity()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
